<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    tools:context=".ui.ChooseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/headline_choose_account_type"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceHeadline5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/title_user_tax" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/title_user_seller" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_user_carrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/title_user_carrier" />

</LinearLayout>