<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.authentication.PhoneConfirmationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_register"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
        />

    <TextView
        android:id="@+id/tv_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="?textAppearanceBody1"
        tools:text="@string/title_we_sent_code"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirmation_sms"
        android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:maxLength="5"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title_confirm"/>


</LinearLayout>