<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Profil"
            app:navigationIcon="@drawable/baseline_close_24"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_last_poetric_name"
            android:layout_margin="8dp"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_last_poetric_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text|textCapWords"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_document_type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="Hújjet túri"
                android:layout_margin="8dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/atv_document_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:maxLength="9"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_passport_series"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_passport_series"
                android:layout_margin="8dp"
                app:endIconMode="clear_text"
                android:layout_weight="1"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@id/et_passport_series"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text|textCapCharacters"
                    android:maxLines="1"
                    />


            </com.google.android.material.textfield.TextInputLayout>





        </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_position"
            android:layout_margin="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/atv_position"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_region"
            android:layout_margin="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/atv_region"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            app:prefixText="+998"
            android:layout_margin="8dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLength="9"
                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_margin="8dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLength="20"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Jan'alaw"/>

    </LinearLayout>




</androidx.core.widget.NestedScrollView>